Try to show the full ellipsis at all times

BUG=697448

Review-Url: https://codereview.chromium.org/2736003003
Cr-Commit-Position: refs/heads/master@{#455937}

Former-commit-id: 246a46ddac2484d3860a4661010a683b0ab02289